--- a/src/NoteService/appsettings.json
+++ b/src/NoteService/appsettings.json
@@ -6,7 +6,7 @@
     "Issuer": "Your mother",
     "Audience": "You of course, motherfucker!",
     "Expires": "00:02:00",
-    "SecretKey": "PLACEHOLDER"
+    "SecretKey": "PLACEHOLDER_PLACEHOLDER"
   },
   "Logging": {
     "LogLevel": {
